# UVLM

./: README.md  UVLM (Deprecated v2.2.2).ipynb  UVLM.ipynb  UVLM_Project_Complete_Documentation.md  VERSIONS.txt  gitignore  pyproject.toml
notebooks/: UVLM_colab.ipynb  UVLM_local.ipynb
uvlm/: __init__.py  batch.py  consensus.py  inference.py  loader.py  parsers.py  prompts.py  registry.py  utils.py
